lab/minio/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: core-minio
  labels:
    app: minio
    account: core
    owner: tonyhhyip
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
        account: core
        owner: tonyhhyip
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2018-04-04T05-20-54Z
          commands:
          args:
            - gateway
            - azure
          ports:
            - containerPort: 9000
