lab/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-minio
  labels:
    app: minio
    account: core
    owner: tonyhhyip
spec:
  ports:
  - name: account
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    account: core
    owner: tonyhhyip
  type: ClusterIP
