lab/minio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: core-minio
  labels:
    app: minio
    account: core
    owner: tonyhhyip
spec:
  rules:
    - host: minio.ysitd.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: core-minio
              servicePort: 9000
